passing code check2