@@ -13,7 +13,6 @@ public class Allocator {
     private static final int MEMOP = 0;
     private static final int LOADI = 1;
     private static final int ARITHOP = 2;
-    private static final int OUTPUT = 3;
 
 
     private IRList renamedCode;
@@ -31,25 +30,28 @@ public class Allocator {
 
     public Allocator(int numRegisters, IRList renamedCode, int vrName, int maxLive) {
         this.reservedSpillRegister = numRegisters-1;
+        this.registerStack = new Stack<>();
         this.numRegisters = numRegisters;
         this.renamedCode = renamedCode;
         this.maxLive = maxLive;
+        this.VRtoSpillLoc = new int[vrName];
         // initialize all data structures
         this.PRtoVR = new int[numRegisters];
         this.marks = INVALID;
-        this.VRtoPR = new int[vrName-1];
+        this.VRtoPR = new int[vrName];
         this.PRtoNU = new int[numRegisters];
         this.workingNode = renamedCode.getHead().getNext();
-        for (int i = 0; i < vrName-1; i++) {
+        for (int i = 0; i < vrName; i++) {
             VRtoPR[i] = INVALID;
         }
         Arrays.setAll(PRtoNU, i -> INVALID);
         Arrays.setAll(PRtoVR, i -> INVALID);
-        for (int i = 0; i < numRegisters-1; i++) { // leaving the last register value empty for spills
-            registerStack.push(i);
-        }
+        Arrays.setAll(VRtoSpillLoc, i -> INVALID);
         if (maxLive <= numRegisters) {
             registerStack.push(reservedSpillRegister); // add the last one to the stack if maxlive is less than or equal
+        }
+        for (int i = numRegisters-2; i >= 0; i--) { // leaving the last register value empty for spills
+            registerStack.push(i);
         }
     }
 
@@ -70,6 +72,12 @@ public class Allocator {
      * @param virtualRegister
      */
     private void restore(int virtualRegister, int physicalRegister) {
+        String printS = "";
+        for (int i: VRtoSpillLoc) {
+            printS += Integer.toString(i) + ", ";
+        }
+//        System.out.println(virtualRegister);
+//        System.out.println(printS);
         // implement
         IRNode loadI = new IRNode(Integer.MAX_VALUE, LOADI, "loadI");
         loadI.setSourceRegister(0, VRtoSpillLoc[virtualRegister]);
@@ -77,7 +85,7 @@ public class Allocator {
 
         insertAboveWorkingNode(loadI);
 
-        IRNode load = new IRNode(Integer.MAX_VALUE, LOADI, "load");
+        IRNode load = new IRNode(Integer.MAX_VALUE, MEMOP, "load");
         load.setPhysicalRegister(0, reservedSpillRegister);
         load.setPhysicalRegister(1, physicalRegister);
 
@@ -93,7 +101,7 @@ public class Allocator {
             reg = registerStack.pop();
         } else {
             // find register to spill (preferably the one with the highest next use value
-            reg = spill(virtualRegister);
+            reg = spill();
         }
         VRtoPR[virtualRegister] = reg;
         PRtoVR[reg] = virtualRegister;
@@ -101,27 +109,31 @@ public class Allocator {
         return reg;
     }
 
-    private int spill(int virtualRegister) {
+    private int spill() {
         int currentSpillAddress;
         int spillReg = 0;
         int highestNU = 0;
-        for (int i = 0; i < numRegisters; i++) {
+        int spillVR = 0;
+        for (int i = 0; i < numRegisters-1; i++) {
             if (i == marks) { // dont spill
                 continue;
-            } else {
-                if (PRtoNU[i] > highestNU) {
-                    spillReg = i;
-                    highestNU = PRtoNU[i];
-                }
+            }
+            if (PRtoNU[i] > highestNU) {
+                spillReg = i;
+                highestNU = PRtoNU[i];
+                spillVR = PRtoVR[i];
             }
         }
-
-        if (VRtoSpillLoc[virtualRegister] == INVALID) {
+        if (VRtoSpillLoc[spillVR] == INVALID) {
             currentSpillAddress = spillLocation;
+            VRtoSpillLoc[spillVR] = spillLocation;
             spillLocation += 4;
         } else {
-            currentSpillAddress = VRtoSpillLoc[virtualRegister];
+            currentSpillAddress = VRtoSpillLoc[spillVR];
         }
+
+        VRtoPR[spillVR] = INVALID; // setting the spilled value to now be invalid]
+
 
         IRNode loadI = new IRNode(Integer.MAX_VALUE, LOADI, "loadI");
         loadI.setSourceRegister(0, currentSpillAddress);
@@ -140,7 +152,7 @@ public class Allocator {
         // finish this
     }
 
-    private void allocate() {
+    public void allocate() {
         IRNode tail = renamedCode.getTail();
         int opCode;
         while (workingNode != tail) {
@@ -148,12 +160,15 @@ public class Allocator {
             switch (workingNode.getOpCode()) {
                 case MEMOP: { // MEMOP (store, load)
                     handleMEMOP();
+                    break;
                 }
                 case LOADI: { // LOADI (loadI)
                     handleLOADI();
+                    break;
                 }
                 case ARITHOP: { // (add, sub, mult, lshift, rshift)
                     handleARITHOP();
+                    break;
                 }
             }
             workingNode = workingNode.getNext();
@@ -162,12 +177,12 @@ public class Allocator {
 
 
     private void handleARITHOP() {
-        handleUses(List.of(0, 1));
-        handleDef(List.of(2));
+        handleUses(Arrays.asList(0, 1));
+        handleDef(Arrays.asList(2));
     }
 
     private void handleLOADI() {
-        handleDef(List.of(1));
+        handleDef(Arrays.asList(1));
     }
 
     private void clearMarks() {
@@ -176,9 +191,10 @@ public class Allocator {
 
     private void handleMEMOP() {
         if (workingNode.getLexeme().equals("store")) {
-            handleUses(List.of(0,1));
+            handleUses(Arrays.asList(0,1));
         } else { // load
-            handleUses(List.of(1));
+            handleUses(Arrays.asList(0));
+            handleDef(Arrays.asList(1));
         }
     }
 
@@ -187,10 +203,12 @@ public class Allocator {
         for (int i: uses) {
             pr = VRtoPR[workingNode.getVirtualRegister(i)];
             if (pr == INVALID) {
-                workingNode.setPhysicalRegister(i, getAPR(workingNode.getVirtualRegister(i), workingNode.getnextUse(i)));
-                restore(workingNode.getVirtualRegister(i), workingNode.getPhysicalRegister(i));
+                pr = getAPR(workingNode.getVirtualRegister(i), workingNode.getnextUse(i));
+                workingNode.setPhysicalRegister(i, pr);
+                restore(workingNode.getVirtualRegister(i), pr);
             } else {
                 workingNode.setPhysicalRegister(i, pr);
+                PRtoNU[pr] = workingNode.getnextUse(i);
             }
             marks = workingNode.getPhysicalRegister(i);
         }
@@ -199,12 +217,13 @@ public class Allocator {
                 freeAPR(workingNode.getPhysicalRegister(i));
             }
         }
+        clearMarks();
     }
 
 
     private void handleDef(List<Integer> defs) {
         for (int i: defs) {
-            workingNode.setPhysicalRegister(workingNode.getVirtualRegister(i), workingNode.getnextUse(i));
+            workingNode.setPhysicalRegister(i, getAPR(workingNode.getVirtualRegister(i), workingNode.getnextUse(i)));
         }
     }
 
@@ -214,6 +233,5 @@ public class Allocator {
         workingNode.getPrev().setNext(node);
         workingNode.setPrev(node);
     }
-
 
 }
